--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=auth
+
+spring.data.mongodb.uri = mongodb+srv://sandeepan:sportiz1234@testdb.wb8rq2f.mongodb.net/user?retryWrites=true&w=majority&appName=testDB
